# spic

./: .gitignore  CMakeLists.txt  Makefile  README.md  Time_Evaluation.xlsx  a.txt  comparison_results.csv  comparison_results.rpt  golden.txt  test.py
include/: commands.h  constants.h  dc_sweeps.h  element_lists.h  mna.h  netlist.h  node_table.h  solver.h  sparse_system.h  system.h  transient.h  util.h
scripts/: README.md  compare_dirs_csv.py  compare_dirs_stdout.py  make_golden.py  perf_comparison.py  plot_transient.py  run_all.sh  test_all.py  test_cir.py
src/: commands.cpp  dc_sweeps.cpp  lexer.l  main.cpp  mna.cpp  netlist.cpp  node_table.cpp  parser.y  solver.cpp  sparse_system.cpp  system.cpp  transient.cpp  util.cpp
tests/: example.cir  part1_Najm_front_page.cir  part1_all_elements_1K_nodes.cir  part1_simple.cir  part1_simple_reordered.cir  part3_LU_10K_nodes.cir  part3_LU_1K_nodes.cir  part3_LU_20K_nodes.cir  part3_LU_30K_nodes.cir  part3_LU_5K_nodes.cir  part3_LU_real_circuit_1.cir  part3_LU_real_circuit_2.cir  part3_SPD_10K_nodes.cir  part3_SPD_1K_nodes.cir  part3_SPD_20K_nodes.cir  part3_SPD_30K_nodes.cir  part3_SPD_5K_nodes.cir  part3_simple.cir  part3_simple_SPD.cir  part3_simple_multi_DC_sweeps.cir  test.cir
tests/course/eval/: CUSTOM_0.csv  CUSTOM_0.rpt  CUSTOM_ITER_0.csv  CUSTOM_ITER_0.rpt  CUSTOM_ITER_1.csv  CUSTOM_ITER_1.rpt  CUSTOM_ITER_2.csv  CUSTOM_ITER_2.rpt  INTEGRATED_0.csv  INTEGRATED_0.rpt
tests/course/eval/CUSTOM_0/: part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.csv  part3_LU_5K_nodes.rpt  part3_LU_real_circuit_1.csv  part3_LU_real_circuit_1.rpt  part3_LU_real_circuit_2.csv  part3_LU_real_circuit_2.rpt  part3_SPD_1K_nodes.csv  part3_SPD_1K_nodes.rpt  part3_SPD_5K_nodes.csv  part3_SPD_5K_nodes.rpt
tests/course/eval/CUSTOM_ITER_0/: part3_LU_10K_nodes.csv  part3_LU_10K_nodes.rpt  part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.rpt  part3_SPD_10K_nodes.csv  part3_SPD_10K_nodes.rpt  part3_SPD_1K_nodes.csv  part3_SPD_1K_nodes.rpt  part3_SPD_5K_nodes.csv  part3_SPD_5K_nodes.rpt  part3_simple.csv  part3_simple.rpt  part3_simple_SPD.csv  part3_simple_SPD.rpt  part3_simple_multi_DC_sweeps.csv  part3_simple_multi_DC_sweeps.rpt
tests/course/eval/CUSTOM_ITER_1/: part3_LU_10K_nodes.csv  part3_LU_10K_nodes.rpt  part3_SPD_10K_nodes.csv  part3_SPD_10K_nodes.rpt
tests/course/eval/CUSTOM_ITER_2/: part3_LU_10K_nodes.csv  part3_LU_10K_nodes.rpt  part3_SPD_10K_nodes.csv  part3_SPD_10K_nodes.rpt
tests/course/eval/INTEGRATED_0/: part3_LU_10K_nodes.csv  part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.rpt  part3_LU_real_circuit_1.csv  part3_LU_real_circuit_1.rpt  part3_LU_real_circuit_2.csv  (+9 more)
tests/course_transient/: part6_simple.cir  part6_simple_SPD.cir
tests/eval/: CUSTOM_0.csv  CUSTOM_0.rpt  CUSTOM_SPARSE_ITER_42.csv  CUSTOM_SPARSE_ITER_42.rpt  INTEGRATED_0.csv  INTEGRATED_0.rpt  INTEGRATED_ITER_1.csv  INTEGRATED_ITER_1.rpt  INTEGRATED_SPARSE_42.csv  INTEGRATED_SPARSE_42.rpt  INTEGRATED_SPARSE_ITER_42.csv  INTEGRATED_SPARSE_ITER_42.rpt
tests/eval/CUSTOM_0/: part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_real_circuit_1.csv  part3_LU_real_circuit_1.rpt  part3_LU_real_circuit_2.csv  part3_LU_real_circuit_2.rpt  part3_SPD_1K_nodes.csv  part3_SPD_1K_nodes.rpt  part3_simple.csv  part3_simple.rpt  part3_simple_SPD.csv  part3_simple_SPD.rpt  part3_simple_multi_DC_sweeps.csv  part3_simple_multi_DC_sweeps.rpt
tests/eval/CUSTOM_ITER_0/: part3_simple.csv  part3_simple.rpt
tests/eval/CUSTOM_ITER_42/: part3_LU_5K_nodes.csv
tests/eval/CUSTOM_SPARSE_ITER_0/: part3_simple.csv  part3_simple.rpt
tests/eval/CUSTOM_SPARSE_ITER_42/: part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.csv  part3_LU_5K_nodes.rpt  part3_SPD_1K_nodes.csv  part3_SPD_1K_nodes.rpt  part3_SPD_5K_nodes.csv  part3_SPD_5K_nodes.rpt  part3_simple.csv  part3_simple.rpt  part3_simple_SPD.csv  part3_simple_SPD.rpt  part3_simple_multi_DC_sweeps.csv  part3_simple_multi_DC_sweeps.rpt
tests/eval/INTEGRATED_0/: part3_LU_10K_nodes.rpt  part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.csv  part3_LU_real_circuit_1.csv  part3_LU_real_circuit_1.rpt  part3_LU_real_circuit_2.csv  part3_LU_real_circuit_2.rpt  part3_SPD_1K_nodes.rpt  part3_SPD_5K_nodes.rpt  part3_simple.csv  part3_simple.rpt  part3_simple_SPD.csv  part3_simple_SPD.rpt  part3_simple_multi_DC_sweeps.csv  part3_simple_multi_DC_sweeps.rpt
tests/eval/INTEGRATED_ITER_1/: part3_LU_10K_nodes.rpt  part3_LU_5K_nodes.csv  part3_LU_5K_nodes.rpt  part3_SPD_10K_nodes.csv  part3_SPD_10K_nodes.rpt  part3_SPD_1K_nodes.csv  part3_SPD_1K_nodes.rpt  part3_SPD_5K_nodes.csv  part3_SPD_5K_nodes.rpt  part3_simple.csv  part3_simple.rpt  part3_simple_SPD.csv  part3_simple_SPD.rpt  part3_simple_multi_DC_sweeps.csv  part3_simple_multi_DC_sweeps.rpt
tests/eval/INTEGRATED_SPARSE_42/: part3_LU_10K_nodes.csv  part3_LU_10K_nodes.rpt  part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.csv  part3_LU_5K_nodes.rpt  part3_LU_real_circuit_1.csv  part3_LU_real_circuit_1.rpt  part3_LU_real_circuit_2.csv  part3_LU_real_circuit_2.rpt  part3_SPD_10K_nodes.csv  part3_SPD_10K_nodes.rpt  part3_SPD_1K_nodes.csv  part3_SPD_1K_nodes.rpt  part3_SPD_5K_nodes.csv  part3_SPD_5K_nodes.rpt  part3_simple.csv  part3_simple.rpt  part3_simple_SPD.csv  part3_simple_SPD.rpt  part3_simple_multi_DC_sweeps.csv  part3_simple_multi_DC_sweeps.rpt
tests/eval/INTEGRATED_SPARSE_ITER_42/: part3_LU_10K_nodes.csv  part3_LU_10K_nodes.rpt  part3_LU_1K_nodes.csv  part3_LU_1K_nodes.rpt  part3_LU_5K_nodes.csv  part3_LU_5K_nodes.rpt
tests/eval/custom_spic_1/: part3_LU_real_circuit_1.csv  part3_LU_real_circuit_2.csv  part3_simple.csv
tests/eval/integrated_spic_1/: part3_LU_5K_nodes.csv  part3_SPD_1K_nodes.csv  part3_simple.csv  part3_simple_multi_DC_sweeps.csv
tests/golden/: part3_simple.gout
tests/ibm/eval/: CUSTOM_SPARSE_ITER_0.csv  CUSTOM_SPARSE_ITER_0.rpt  INTEGRATED_SPARSE_1.csv  INTEGRATED_SPARSE_1.rpt
tests/ibm_transient/ibmpg1t/: spic_performance.rpt
tests/part3_simple.cir/: part3_LU_1K_nodes.cir
(+29 files in other folders)
